feat(update): add scripts/repo_update.py to fetch upstream changes and update local files with backups; ignore backups/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -231,6 +231,9 @@ scratch/
 experiments/
 playground/
 
+# Repo sync backups
+backups/
+
 # Lock files from different package managers
 poetry.lock
 Pipfile.lock
